# hw2

./: README.md
ex0/: CMakeLists.txt  mtm_tot.c
hw2/: pythonFuncs.py
hw3/hw3-master/: CMakeLists.txt
py3/hw2/: Survey.i  Survey_wrap.c  pythonFuncs.py
py36/hw2/: Survey.i  main2.py  pythonFuncs.py
