add_executable(ss MtmParkingLot.cpp ParkingLot.h ParkingLotPrinter.cpp ParkingLotPrinter.h ParkingLotTypes.h
        ParkingSpot.cpp ParkingSpot.h Time.cpp Time.h UATests.cpp UniqueArray.h UniqueArrayImp.h)

#add_library(aa STATIC amount_set.c )

#include_directories(tests)

#target_link_libraries(ss aa)